# Compressonator

./: BuildGLTFEncoder.bat  CMakeLists.txt  GLTFEncoderReadme.md
Compressonator/Applications/_Plugins/Common/gltf/: tiny_gltf2.h  tiny_gltf2_utils.cpp
Compressonator/Applications/_Plugins/Common/json/: json.h
GLTFEncoderApp/: CMakeLists.txt  GLTFEncoder.cpp
